Fix bootstrap styles on partition select. Issue with overflow: hidden hiding tooltips and handles.

--- a/src/main.scss
+++ b/src/main.scss
@@ -1,3 +1,5 @@
+$arrowHeadHeight: 4px;
+$partitionBorderRadius: 4px;
 $partitionSelectorHeight: 50px;
 $workHoursPartitionHeight: 28px;
 $workHoursMarginHeight: 8px;
@@ -19,6 +21,7 @@ body {
   box-sizing: border-box;
   // margin-bottom: 18px;
   & .progress {
+    overflow: visible;
     height: $partitionSelectorHeight;
     &.invalid {
       box-shadow: 0 0 4px 2px rgb(213, 19, 0);
@@ -29,6 +32,14 @@ body {
     // background-color: lightpink;
     position: relative;
     user-select: none;
+    &:first-child {
+      border-top-left-radius: $partitionBorderRadius;
+      border-bottom-left-radius: $partitionBorderRadius;
+    }
+    &:last-child {
+      border-top-right-radius: $partitionBorderRadius;
+      border-bottom-right-radius: $partitionBorderRadius;
+    }
     &.resizing {
       border-color: blue;
     }
@@ -45,7 +56,7 @@ body {
         content: "";
         width: 11px;
         position: absolute;
-        left: -5px;
+        left: - $arrowHeadHeight;
         top: 0;
         height: 100%;
         background-color: #fff;
@@ -54,15 +65,15 @@ body {
       &::before {
         content: "";
         position: absolute;
-        bottom: -7px;
-        left: -5px;
+        bottom: - $arrowHeadHeight - 1px;
+        left: - $arrowHeadHeight;
         width: 0;
         height: 0;
         border: 0 solid transparent;
-        border-left-width: 5px;
-        border-right-width: 5px;
-        border-bottom-width: 5px;
-        border-bottom-color: black;
+        border-left-width: $arrowHeadHeight;
+        border-right-width: $arrowHeadHeight;
+        border-bottom-width: $arrowHeadHeight;
+        border-bottom-color: rgba(0, 0, 0, 0.6);
       }
       &.dragging {
         background-color: rgb(0, 0, 0);
@@ -83,6 +94,7 @@ body {
       border-radius: 6px;
       display: none;
       z-index: 999;
+      pointer-events: none;
       // &::after {
       //   content: "";
       //   width: 0;
